# carvX

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
carvx/: __init__.py  apfs.py  carver.py  cli.py  customsig.py  ext4.py  fat.py  fragment.py  grep.py  handlers.py  hfsplus.py  images.py  matcher.py  ntfs.py  partition.py  reader.py  report.py  signatures.py  validate.py
tests/: builders.py  conftest.py  fat_builder.py  mac_fs_builder.py  make_test_image.py  ntfs_builder.py  test_bitlocker.py  test_carver.py  test_ext4.py  test_extras.py  test_fat.py  test_fragment.py  test_handlers.py  test_images.py  test_mac_fs.py  test_matcher.py  test_ntfs.py  test_partition.py  test_reader.py  test_validate.py
web/: README.md
web/app/: main.py
web/static/css/: custom.css
web/templates/: index.html  results.html
