[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carvx"
version = "0.1.0"
description = "Signature-based file carver for disk images and block devices (photorec-style)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
carvx = "carvx.cli:main"

[tool.setuptools.packages.find]
include = ["carvx*"]
